# kumaru

./: KUMARU test 4.yml  README.md
prompt/: AnalyzeEconomy(RAG).md  Cost&ProfitAgent.md  CultivationAgent.md  GeoWeatherAgent.md  IntentClassifier.md  KUMARU.md  NewsAgent.md  OilPriceAgent.md  PriceAgent.md  PumpRadarAgent.md  RecommendProducts.md  code.py  code2.py  code3.py
thaipumpradar/: Dockerfile  README.md  api.py  cache.py  docker-compose.yml  main.py  pyproject.toml  scrap.py
thaipumpradar/test/: conftest.py  test_api.py  test_main.py  test_scrap.py
